feat: refactor data exchange request to work without notifications
