# backend/src/main/java/org/eclipse/tractusx/puris/backend/dataexchangerequest/domain/repository/ReportedDataExchangeRequestRepository.java
@@ -18,7 +18,7 @@ SPDX-License-Identifier: Apache-2.0
 */
 package org.eclipse.tractusx.puris.backend.dataexchangerequest.domain.repository;
 
-import java.util.Optional;
+import java.util.List;
 import java.util.UUID;
 
 import org.eclipse.tractusx.puris.backend.dataexchangerequest.domain.model.ReportedDataExchangeRequest;
@@ -27,6 +27,8 @@ import org.springframework.stereotype.Repository;
 @Repository
 public interface ReportedDataExchangeRequestRepository  extends DataExchangeRequestRepository<ReportedDataExchangeRequest> {
 
-    Optional<ReportedDataExchangeRequest> findByNotification_Uuid(UUID notificationUuid);
+    List<ReportedDataExchangeRequest> findAllByNotification_Uuid(UUID notificationUuid);
+
+    List<ReportedDataExchangeRequest> findAllBySourceDisruptionIdAndPartnerBpnl(UUID sourceDisruptionId, String partnerBpnl);
 
 }
